--- a/.github/workflows/haskell.yaml
+++ b/.github/workflows/haskell.yaml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-haskell@v1
+    - uses: haskell-actions/setup@v1
       with:
         ghc-version: '9.4.7'
         cabal-version: '3.4'
