Add optimization flag to executable and tests

--- a/aoc2023.cabal
+++ b/aoc2023.cabal
@@ -68,6 +68,7 @@ library
 
 executable aoc2023
     import:           ghc_options
+    ghc-options:      -O2
     main-is:          Main.hs
     build-depends:    aoc2023
     hs-source-dirs:   app
@@ -75,6 +76,7 @@ executable aoc2023
 test-suite aoc-test
     import:           ghc_options
     type:             exitcode-stdio-1.0
+    ghc-options:      -O2
     main-is:          Main.hs
     build-depends:    aoc2023
     hs-source-dirs:   test
