--- a/aoc2023.cabal
+++ b/aoc2023.cabal
@@ -78,5 +78,6 @@ test-suite aoc-test
     type:             exitcode-stdio-1.0
     ghc-options:      -O2
     main-is:          Main.hs
-    build-depends:    aoc2023
+    build-depends:    aoc2023,
+                      time
     hs-source-dirs:   test
