--- a/.github/workflows/haskell.yaml
+++ b/.github/workflows/haskell.yaml
@@ -40,4 +40,4 @@ jobs:
     - name: Build
       run: cabal build --enable-tests --enable-benchmarks
     - name: Run tests
-      run: cabal test
+      run: cabal test --test-show-details=streaming
