--- a/aoc2023.cabal
+++ b/aoc2023.cabal
@@ -36,6 +36,7 @@ common ghc_options
                       vector           >= 0.12 && < 0.14,
                       directory        >= 1.3  && < 2.0,
                       parallel         >= 3.2  && < 4.0,
+                      search-algorithms >= 0.3  && < 1.0,
 
 library
     import:           ghc_options
