--- a/.github/workflows/haskell.yaml
+++ b/.github/workflows/haskell.yaml
@@ -35,6 +35,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt install libz3-dev
         cabal update
         cabal build --only-dependencies --enable-tests
     - name: Build
